[package]
name = "rurp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
euclid = "0.22.9"
geo = "0.28.0"
geo-rasterize = "0.1.2"
ndarray = "0.15.6"
rayon = "1.9.0"
thiserror = "1.0.57"
voronator = "0.2.1"

[dev-dependencies]
insta = "1.34.0"
rand = "0.8.5"
rstest = "0.18.2"
