[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
euclid = "0.22.9"
geo = "0.28.0"
geo-rasterize = "0.1.2"
image = "0.24.9"
insta = "1.34.0"
ndarray = "0.15.6"
rand = "0.8.5"
rayon = "1.9.0"
rstest = "0.18.2"
thiserror = "1.0.57"
voronator = "0.2.1"
pre-commit-hooks = "0.3.0"

[workspace.metadata.precommit]
fmt = "cargo fmt --check --all"
check = "cargo clippy -r --workspace --frozen"
test = "cargo test -r --workspace"