[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
euclid = { version = "0.22.9", features = [] }
geo = { version = "0.28.0", features = [] }
geo-rasterize = { version = "0.1.2", features = [] }
image = { version = "0.24.9", features = [] }
insta = { version = "1.34.0", features = [] }
kiddo = { version = "4.2.0", features = [] }
ndarray = { version = "0.15.6", features = [] }
once_cell = { version = "1.19.0", features = [] }
pre-commit-hooks = { version = "0.3.0", features = [] }
rand = { version = "0.8.5", features = [] }
rayon = { version = "1.9.0", features = [] }
rstest = { version = "0.18.2", features = [] }
spade = { version = "2.6.0", features = [] }
thiserror = { version = "1.0.57", features = [] }
voronator = { version = "0.2.1", features = [] }

[workspace.metadata.precommit]
fmt = "cargo fmt --check --all"
check = "cargo clippy -r --workspace --frozen"
test = "cargo test -r --workspace"
