[package]
name = "py-rurp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rurp"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { workspace = true }
rurp = { workspace = true }
ndarray = { workspace = true }
numpy = { workspace = true }


[dev-dependencies]
rstest = { workspace = true }
test-utils = { workspace = true }
